--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -31,7 +31,7 @@
 .animate-up{
   animation-name: up;
   animation-duration: 300ms;
-  animation-fill-mode: backwards;
+  animation-fill-mode: both;
 }
 .animate-right{
   animation-name: right;
